# src/controllers/post.controller.js
@@ -1,23 +1,14 @@
 const postService = require('../services/post.service');
 const logger = require('../configs/logger/logger.config');
-
+const helper = require('../utils/helper.util');
 exports.getAllPost = async (req, res) => {
     logger.info('GET request received for all posts');
     try {
         const { categoryId, userId, keyword, page, size } = req.body;
-
-        if (categoryId && !Number.isInteger(categoryId)) {
-            return res.status(400).json({ error: "categoryId must be an integer" });
+        const validation = helper.validatePostQuery(categoryId, userId, keyword, page, size);
+        if (!validation.isValid) {
+            return res.status(400).json(validation.errors);
         }
-
-        if (userId && !Number.isInteger(userId)) {
-            return res.status(400).json({ error: "userId must be an integer" });
-        }
-
-        if (keyword && typeof keyword !== 'string') {
-            return res.status(400).json({ error: "keyword must be a string" });
-        }
-
         const posts = await postService.getAllPosts(categoryId, userId, keyword, page, size);
         logger.info(`Retrieved ${posts.length} posts`);
         return res.status(200).json(posts);
@@ -30,20 +21,15 @@ exports.getAllPost = async (req, res) => {
 exports.createPost = async (req, res) => {
     logger.info('POST request received to create a new post');
     try {
-        const { title, content, category_id, tag_id } = req.body;
-        const user_id = req.user.userId;
-
-        if (!title || !content || !category_id) {
-            return res.status(400).json({
-                error: "Title, content, and category_id are required"
-            });
+        const { title, content, category_id, tagIds } = req.body;
+        const user_id = req.session.user.userId;
+        const validation = helper.validatePostInput({ title, content, category_id, tagIds });
+        if (!validation.isValid) {
+            logger.error(`Invalid request: ${validation.errors}`);
+            return res.status(400).json(validation.errors);
         }
 
-        if(!await postService.checkTagExists(tag_id)){
-            return res.status(400).json({error: 'Tag not found'});
-        }
-
-        const result = await postService.createPost(title, content, user_id, category_id, tag_id);
+        const result = await postService.createPost(title, content, user_id, category_id, tagIds);
         logger.info(`New post created with ID: ${result.id}`);
         return res.status(201).json(result);
     } catch (error) {
@@ -56,6 +42,10 @@ exports.getPostById = async (req, res) => {
     const postId = req.params.id;
     logger.info(`GET request received for post ID: ${postId}`);
     try {
+        const isValidId = helper.isValidId(req.params.id);
+        if (!isValidId) {
+            return res.status(400).json({ error: 'Invalid post ID' });
+        }
         const result = await postService.getPostById(postId);
         if (result.length === 0) {
             return res.status(404).json({ error: "Post not found" });
@@ -73,7 +63,10 @@ exports.updatePost = async (req, res) => {
     logger.info(`PUT request received to update post ID: ${postId}`);
     try {
         const { title, content, category_id } = req.body;
-
+        const isValidId = helper.isValidId(req.params.id);
+        if (!isValidId) {
+            return res.status(400).json({ error: 'Invalid post ID' });
+        }
         if (!title && !content && !category_id) {
             return res.status(400).json({
                 error: "At least one field (title, content, or category_id) must be provided for update"
